--- a/src/App.less
+++ b/src/App.less
@@ -30,6 +30,19 @@
   color: #61dafb;
 }
 
+#components-layout-demo-top-side .logo {
+  width: 120px;
+  height: 31px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 16px 28px 16px 0;
+  float: left;
+}
+
+/*for content box*/
+.site-layout-background {
+  background: #fff;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
