get icons working, layout

--- a/src/App.less
+++ b/src/App.less
@@ -30,6 +30,7 @@
   color: #61dafb;
 }
 
+/*doesn't seem to be working??*/
 #components-layout-demo-top-side .logo {
   width: 120px;
   height: 31px;
