--- a/src/App.less
+++ b/src/App.less
@@ -1,5 +1,11 @@
 @import '~antd/dist/antd.less';
 
+.workout-calendar-divider {
+  height: 800px;
+  color: #333;
+  font-weight: normal;
+}
+
 .App {
   text-align: center;
 }
