start workout wip

--- a/src/App.less
+++ b/src/App.less
@@ -1,10 +1,25 @@
 @import '~antd/dist/antd.less';
 
-.workout-calendar-divider {
-  height: 800px;
+
+/*flex*/
+.flex-container {
+  display: flex;
+}
+
+.align-center {
+  align-items: center;
+}
+
+
+
+/*component specific*/
+.workout-divider {
+  height: 520px;
   color: #333;
   font-weight: normal;
 }
+
+
 
 .App {
   text-align: center;
