update steps, start on select workout

--- a/src/components/StartWorkout.less
+++ b/src/components/StartWorkout.less
@@ -1,10 +1,37 @@
-.workout-form-list {
+.workout-form-list-content{
 	width: 100%;
 	align-self: flex-start;
-	margin-top: 74px;
+	margin-top: 14px;
 	text-align: center;
 }
 
+.workout-form-list {
+	height: 450px;
+	overflow-y: auto;
+}
+
+.workout-steps {
+	width: 300px;
+  height: 500px;
+  overflow-y: auto;
+}
+
 .previous-exercise {
-	opacity: 0.3;
+	label {
+		opacity: 0.4;
+	}
+	.workout-date {
+		opacity: 0.4;
+	}
+}
+
+.workout-date {
+	font-weight: bold;
+}
+
+.exercise-list-item {
+	width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 9px 0px;  /*(top/bottom) (left/right)*/
 }
