--- a/src/components/StartWorkout.less
+++ b/src/components/StartWorkout.less
@@ -35,3 +35,10 @@
   justify-content: center;
   margin: 9px 0px;  /*(top/bottom) (left/right)*/
 }
+
+
+.select-workout-wrapper {
+	justify-content: center;
+  align-items: center;
+  height: 600px;
+}
