--- a/src/components/StartWorkout.less
+++ b/src/components/StartWorkout.less
@@ -38,7 +38,8 @@
 
 
 .select-workout-wrapper {
+  display: flex;
 	justify-content: center;
   align-items: center;
-  height: 600px;
+  height: 65vh;
 }
